--- a/more.html
+++ b/more.html
@@ -16,7 +16,7 @@
         <tr><td>
             <table border="0" width="85%" align="center" cellpadding="15">
                 <tr>
-                    <td> <font size="5" color="black"><b>Kurta guy Group</b></font> </td>
+                    <td> <font size="5" color="black"><b>Abhinaw Barnawal Group</b></font> </td>
     <td width="20%"></td>
     <div class=".menu">
     <td> <a href="#"><font color="magenta">HOME</font></a></td>
