--- a/NavGroup.html
+++ b/NavGroup.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+	    <title>NAV Group</title>
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://i.ibb.co/b73wCsw/Screenshot-2024-04-07-19-01-55.png" type="image/x-icon" width ="15%" height="100%"/>
